# multiphysik

./: .gitignore  .mcp.json  CLAUDE.md  DESIGN_CONSTRAINTS.md  pyproject.toml
docs/: backlog.md  phase0.md  phase1.md  phase2.md
examples/: 00_hello_voxel.py  01_csg_boolean.py  02_tpms_lattice.py  03_headphone_holder.py  04_topopt_holder.py  05_shapek_showcase.py  06_esp32_housing.py  07_modulation_showcase.py  08_cfd_flow.py  09_heat_exchanger.py  10_bike_wall_bracket.py  _render_preview.py
src/picogk_mp/: __init__.py  csg.py  mcp_server.py  tpms.py
src/picogk_mp/cfd/: __init__.py  checks.py  domain.py  lbm_core.py  postprocess.py  solver.py
src/picogk_mp/generators/: __init__.py  bracket.py  holder.py  shape.py
src/picogk_mp/physics/: __init__.py  brief.py  brief_mapper.py  checks.py  engine.py  interface.py  params.py  requirement.py
src/picogk_mp/shapek/: __init__.py  base_shape.py  frame.py  lattice.py  measure.py  modulation.py  primitives.py
src/picogk_mp/topopt/: __init__.py  beso.py  boundary.py  fem.py  pipeline.py
tests/: test_cfd.py  test_csg.py  test_interface.py  test_physics_brief.py  test_physics_engine.py  test_shapek.py  test_topopt.py  test_tpms.py
tests/fixtures/: phase0_sphere.stl  phase1_hollow_sphere.stl  phase1_intersect.stl  phase1_open_hemisphere.stl  phase1_union.stl
